Bug 310594 - Process error when trying to build if parent directory of build directory does not exist.
Summary: Process error when trying to build if parent directory of build directory doe...
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: All build tools (other bugs)
Version First Reported In: git master
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: 4.3.0
Assignee: kdevelop-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-11-24 08:20 UTC by Jeremy W. Murphy
Modified: 2013-04-10 23:56 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jeremy W. Murphy 2012-11-24 08:20:17 UTC
Usually Project->Configure or Project->Build 'just work'.  A couple of days ago they started to fail if the parent directory of the build directory does not exist.  That is, if the build directory is <project>/build, then if <project> does not exist, the action fails.  This error comes up for me because a) I always build out-of-tree and b) my build directory is on a tmpfs that of course disappears if ever I reboot.  
I'm pretty sure that until a few days ago, KDevelop would recreate the whole build directory structure, as in: mkdir -p <whatever/the/project/path/is/build>.  Now it fails if the parent of "build" does not exist.


Reproducible: Always

Steps to Reproduce:
1. Set build path to /tmp/foo/build
2. rm -r /tmp/foo
3. configure

Actual Results:  
Process error dialogue.

Expected Results:  
KDevelop creates foo/build in /tmp.
Comment 1 Aleix Pol 2013-02-27 17:19:04 UTC
This should be fixed for 4.5
Comment 2 Jeremy W. Murphy 2013-02-28 00:00:07 UTC
Yeah, I haven't seen this bug recently, thanks.
Comment 3 Jeremy W. Murphy 2013-03-06 05:37:58 UTC
Looks like I spoke too soon, sorry.  Just created a new project and hit the bug again.
Comment 4 Sergey Vidyuk 2013-03-30 07:20:00 UTC
Can confirm this bug with
 * kdevplatform b1f1ad21d60f6e1f36dafafbbe743e130b43d2fd (yesterday evening state of 1.5 branch).
 * kdevelop 2835a09d76a6a7cd502297b1747bd3f68e7e50c8 (yesterday evening of branch 4.5).

Steps to reproduce: open one of my projects and tried to create new build configuration with path ${TOPLEVEL_PROJ_DIR}/build-2/release (there is no build-2 subdirectory initially). Got an error:

"Build directory 'file:///home/vestnik/Development/test/C++/cppql/build-2/release' does not exist or is not a directory"

Everything works fine if I try to create new build config with path ${TOPLEVEL_PROJ_DIR}/build-2 build-2 subdir is created and cmake is executed.

It's regression of preiosuly closed bug #265966
Comment 5 Aleix Pol 2013-04-10 23:56:15 UTC
Git commit b8e9d6a8b8dcd54a5556f760b47f5acfdb400212 by Aleix Pol.
Committed on 11/04/2013 at 01:54.
Pushed by apol into branch 'master'.

If the build directory is not available, create it

M  +2    -1    projectbuilders/cmakebuilder/cmakejob.cpp

http://commits.kde.org/kdevelop/b8e9d6a8b8dcd54a5556f760b47f5acfdb400212