If the build directory is not available, create it

BUG: 310594